hphp/test/slow/enum_class/enum_class03.php.expectf
Fatal error: Value unsuitable as class constant in %s/slow/enum_class/enum_class03.php on line 10
